--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,4 @@
-@import "_mixin";
+@use "./mixin";
 :root {
   font-family: Inter, system-ui, Avenir, Arial, Helvetica, sans-serif;
   line-height: 1.5;
