--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -37,7 +37,7 @@
   top: 50%;
   transform: translate(50%, 50%);
 }
-@mixin squre($s: 1rem) {
+@mixin square($s: 1rem) {
   height: $s;
   width: $s;
 }
