--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,5 @@
-@import "_mixin";
+@import "mixin";
+@import "dashboard";
 :root {
   font-family: Inter, system-ui, Avenir, Arial, Helvetica, sans-serif;
   line-height: 1.5;
@@ -22,7 +23,7 @@ color: rgb(47, 0,255);
 .green{
 color: rgb(0, 195, 0);
 }
-.adminContainer{
+.admin-container{
   @include grid(1fr,4fr,2rem);
   height:100vh;
   background-color: rgb(247,247,247);
